test(translation): implemented tests for the home page translations

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
         <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
             <div class="space-y-4 md:space-y-8">
                 <div>
-                    <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+                    <h2 id="title" class="text-2xl font-semibold text-gray-900 sm:text-3xl">
                         Public Tierlists
                     </h2>
                     <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8"> <!-- Grid with 3 even columns -->
