--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,7 @@
                     <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
                         <span id="greeting">Loading...</h1>
                     </h2>
+                    <p id="brand-name">TierlistApp</p>
                     <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8"> <!-- Grid with 3 even columns -->
                         <div class="h-32 rounded-lg bg-gray-200"></div>
                         <div class="h-32 rounded-lg bg-gray-200"></div>
