--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,8 @@
                     <label data-i18n="changeLanguageLabel" for="change-language">Loading...</label>
                     <select id="change-language">
                         <option value="en">English</option>
-                        <option value="fr">French</option>
+                        <option value="fr">Francais</option>
+                        <option value="jp">日本語</option>
                     </select>
                     <button id="new-toast">New toast</button>
                 </div>
@@ -190,6 +191,12 @@
                 translation: {
                     greeting: "Bonjour, le Monde!",
                     changeLanguageLabel: "Changer langue :"
+                }
+            },
+            'jp': {
+                translation: {
+                    greeting: "こんにちわ世界!",
+                    changeLanguageLabel: "言語の変更 :"
                 }
             }
         },
