--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/dist/styles.css" rel="stylesheet">
+    <link href="./dist/styles.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="https://cdn.jsdelivr.net/npm/i18next@24.2.3/i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/loc-i18next@0.1.6/dist/umd/loc-i18next.min.js"></script>
@@ -177,6 +177,6 @@
         </div>
     </section>
 </body>
-<script type="text/javascript" src="/assets/scripts/i18n.js"></script>
+<script type="text/javascript" src="./assets/scripts/i18n.js"></script>
 
 </html>
