cd(test): editing a file to see if deployment works

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
                     </h2>
                     <p id="brand-name"><span class="notranslate">Tierlist App</span></p>
                     <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8"> <!-- Grid with 3 even columns -->
-                        <div class="h-32 rounded-lg bg-gray-200"></div>
+                        <div class="h-32 rounded-lg bg-gray-200">TEST_CD</div>
                         <div class="h-32 rounded-lg bg-gray-200"></div>
                         <div class="h-32 rounded-lg bg-gray-200"></div>
                     </div>
