--- a/public/login.html
+++ b/public/login.html
@@ -153,7 +153,7 @@
         document.cookie = `userEmail=${encodeURIComponent(email)}; expires=${expiryDate.toUTCString()}; path=/`;
 
         // Redirect to index.html
-        window.location.href = "index.html";
+        window.location.href = "/";
     });
 
 </script>
