refactor: separate authentication logic from login functionality

--- a/public/login.html
+++ b/public/login.html
@@ -106,7 +106,7 @@
 
 </body>
 <script type="text/javascript" src="./assets/scripts/i18n.js"></script>
-<script type="text/javascript" src="./assets/scripts/authentication.js"></script>
+<script type="module" src="./assets/scripts/login.js"></script>
 <script>
     document.getElementById("dropdownDefaultButton").addEventListener("click", function () {
         document.getElementById("dropdown").classList.toggle("hidden");
