feat: Adding an account list and verification

--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
             <div id="message">
                 <ul id="errors"></ul>
             </div>
-            <form action="#" class="mt-6 mb-0 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
+            <form class="mt-6 mb-0 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
                 <p class="text-center text-lg font-medium" data-i18n="loginFormTitle">Loading...</p>
 
                 <div>
