--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
     document.getElementById('logout-link').addEventListener('click', function (event) {
         event.preventDefault();
         document.cookie = `userEmail=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;`;
-        window.location.href = '/';
+        window.location.href = './index.html';
     });
 </script>
 
